kubernetes/Cluster-Int-Temp/deployments/databases/influxdb/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: influxdb
  namespace: databases
spec:
  replicas: 0
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: influxdb
  template:
    metadata:
      labels:
        app: influxdb
    spec:
      containers:
      - name: influxdb
        image: influxdb:1.8.10
        volumeMounts:
          - name: pvc
            mountPath: /var/lib/influxdb
      volumes:
        - name: pvc
          persistentVolumeClaim:
            claimName: influxdb
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chronograf
  namespace: databases
spec:
  replicas: 1
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: chronograf
  template:
    metadata:
      labels:
        app: chronograf
    spec:
      containers:
      - name: chronograf
        image: influxdb:1.8.10
